--- a/templates/index.html
+++ b/templates/index.html
@@ -9,8 +9,9 @@
     <link rel="stylesheet" href="main.css">
     <style type="text/css">
     </style>
-    <script type="text/javascript" src="main.js"></script>
+    <script type="text/javascript" src="app.js"></script>
   </head>
   <body>
+	<script src="http://code.jquery.com/jquery-latest.js"></script>
   </body>
 </html>
